--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
 
   <title>Animais Fantásticos</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <script>document.documentElement.className += 'js'</script>
 </head>
@@ -110,7 +110,7 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
-  <script src="./script.js"></script>
+  <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
