--- a/index.html
+++ b/index.html
@@ -9,108 +9,125 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
 
   <title>Animais Fantásticos</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <script>document.documentElement.className += 'js'</script>
 </head>
 
 <body>
-  <nav class="header js-navmenu">
-    <ul>
-      <li><a href="#animais"> ANIMAIS</a></li>
-      <li><a href="#faq">FAQ</a></li>
-      <li><a href="#contato">CONTATO</a></li>
-      <li><a href="http://www.iagopaz.com.br">DEV ⇀</a></li>
-    </ul>
-  </nav>
+  <main class="body-container">
+    <nav class="header js-navmenu">
+      <ul>
+        <li><a href="#animais"> ANIMAIS</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contato">CONTATO</a></li>
+        <li><a href="login.html" data-modal="abrir">LOGIN ⇀</a></li>
+      </ul>
+    </nav>
 
-  <section class="grid-mid animais js-scroll" id="animais">
-    <h1 class="title">Animais<br>Fantásticos</h1>
-    <ul class="img-list js-tabmenu">
-      <li><img src="./img/imagem1.jpg" alt="Raposa"></li>
-      <li><img src="./img/imagem2.jpg" alt="Esquilo"></li>
-      <li><img src="./img/imagem3.jpg" alt="Urso"></li>
-      <li><img src="./img/imagem4.jpg" alt="Lobo"></li>
-      <li><img src="./img/imagem5.jpg" alt="Babuíno"></li>
-      <li><img src="./img/imagem6.jpg" alt="Leão"></li>
-    </ul>
-    <div class="animais-content js-tabcontent">
-      <section data-anime="show-right">
-        <h2>RAPOSA</h2>
-        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-        <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-      </section>
-      <section data-anime="show-right">
-        <h2>ESQUILO</h2>
-        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-        <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-      </section>
-      <section data-anime="show-right">
-        <h2>URSO</h2>
-        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-        <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-      </section>
-      <section data-anime="show-right">
-        <h2>LOBO</h2>
-        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-        <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-      </section>
-      <section data-anime="show-right">
-        <h2>BABUÍNO</h2>
-        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-        <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-      </section>
-      <section data-anime="show-right">
-        <h2>LEÃO</h2>
-        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-        <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
-        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-      </section>
+    <section class="grid-mid animais js-scroll" id="animais">
+      <h1 class="title">Animais<br>Fantásticos</h1>
+      <ul class="img-list js-tabmenu">
+        <li><img src="./img/imagem1.jpg" alt="Raposa"></li>
+        <li><img src="./img/imagem2.jpg" alt="Esquilo"></li>
+        <li><img src="./img/imagem3.jpg" alt="Urso"></li>
+        <li><img src="./img/imagem4.jpg" alt="Lobo"></li>
+        <li><img src="./img/imagem5.jpg" alt="Babuíno"></li>
+        <li><img src="./img/imagem6.jpg" alt="Leão"></li>
+      </ul>
+      <div class="animais-content js-tabcontent">
+        <section data-anime="show-right">
+          <h2>RAPOSA</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        </section>
+        <section data-anime="show-right">
+          <h2>ESQUILO</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        </section>
+        <section data-anime="show-right">
+          <h2>URSO</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        </section>
+        <section data-anime="show-right">
+          <h2>LOBO</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        </section>
+        <section data-anime="show-right">
+          <h2>BABUÍNO</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        </section>
+        <section data-anime="show-right">
+          <h2>LEÃO</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        </section>
+      </div>
+    </section>
+
+    <section class="grid-mid faq js-scroll" id="faq">
+      <h1 class="title">Faq</h1>
+      <dl class="faq-content js-accordion">
+        <dt>Qual a idade dos animais?</dt>
+        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+        <dt>Eles são fantásticos?</dt>
+        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+        <dt>Qual a diferença?</dt>
+        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+        <dt>Como proteger?</dt>
+        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+        <dl>
+    </section>
+
+
+    <section class="grid-mid contato js-scroll" id="contato">
+      <h1 class="title">Contato</h1>
+      <picture class="map"><img src="./img/mapa.png" alt="mapa"></picture>
+      <ul>
+        <li>contato@origamid.com</li>
+        <li>+55 (21) 9 9999-9999</li>
+        <li>Rua do Conde, n° 21</li>
+        <li>Rio de Janeiro - RS</li>
+      </ul>
+    </section>
+
+    <footer>
+      <p>Todos os direitos reservados.</p>
+    </footer>
+  </main>
+
+  <section class="modal-container" data-modal="container">
+    <div class="modal">
+      <button class="fechar" data-modal="fechar"" type="button">X</button>
+      <form action="">
+        <label for="email">Email</label>
+        <input type="text" for="email" id="email">
+        <label for="password"> Senha</label>
+        <input type="password" for="password" id="password">
+        <button type="submit" data-modal="entrar">Entrar</button>
+      </form>
     </div>
   </section>
 
-  <section class="grid-mid faq js-scroll" id="faq">
-    <h1 class="title">Faq</h1>
-    <dl class="faq-content js-accordion">
-      <dt>Qual a idade dos animais?</dt>
-      <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
-      <dt>Eles são fantásticos?</dt>
-      <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
-      <dt>Qual a diferença?</dt>
-      <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
-      <dt>Como proteger?</dt>
-      <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
-      <dl>
-  </section>
-
-
-  <section class="grid-mid contato js-scroll" id="contato">
-    <h1 class="title">Contato</h1>
-    <picture class="map"><img src="./img/mapa.png" alt="mapa"></picture>
-    <ul>
-      <li>contato@origamid.com</li>
-      <li>+55 (21) 9 9999-9999</li>
-      <li>Rua do Conde, n° 21</li>
-      <li>Rio de Janeiro - RS</li>
-    </ul>
-  </section>
-
-  <footer>
-    <p>Todos os direitos reservados.</p>
-  </footer>
-
   <script type="module" src="./js/script.js"></script>
+
+
 </body>
 
 </html>
