--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <section class="grid-mid contato js-scroll" id="contato">
       <h1 class="title">Contato</h1>
-      <picture class="map"><img src="./img/mapa.png" alt="mapa"></picture>
+      <div class="map" data-tooltip aria-label="Endereço próximo ao estacionamento."><img src="./img/mapa.png" alt="mapa"></div>
       <ul>
         <li>contato@origamid.com</li>
         <li>+55 (21) 9 9999-9999</li>
