dropdown menu added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
       <ul>
         <li><a href="#animais"> ANIMAIS</a></li>
         <li><a href="#faq">FAQ</a></li>
+        <li data-dropdown>
+          <a href="sobre.html">SOBRE</a>
+          <ul class="dropdown-menu">
+            <li><a href="empresa.html">A Empresa</a></li>
+            <li><a href="equipe.html">A Equipe</a></li>
+            <li><a href="socios.html">Sócios</a></li>
+            <li><a href="investidores.html">Investidores</a></li>
+          </ul>
+        </li>
         <li><a href="#contato">CONTATO</a></li>
         <li><a href="login.html" data-modal="abrir">LOGIN ⇀</a></li>
       </ul>
@@ -114,7 +123,7 @@
 
   <section class="modal-container" data-modal="container">
     <div class="modal">
-      <button class="fechar" data-modal="fechar"" type="button">X</button>
+      <button class="fechar" data-modal="fechar"" type=" button">X</button>
       <form action="">
         <label for="email">Email</label>
         <input type="text" for="email" id="email">
