mobile menu added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=IBM+Plex+Mono:wght@400;500&family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -21,7 +21,8 @@
 <body>
   <main class="body-container">
     <nav class="header js-navmenu">
-      <ul>
+      <button data-menu="btn" aria-expanded="false" aria-controls="menu">Menu</button>
+      <ul data-menu="list" id="menu">
         <li><a href="#animais"> ANIMAIS</a></li>
         <li><a href="#faq">FAQ</a></li>
         <li data-dropdown>
