--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
         <dl>
     </section>
 
+    <section class="grid-mid galeria js-scroll">
+      <div class="wrapper">
+        <ul class="slide">
+          <li><img src="./img/slide/foto1.jpg" alt=""></li>
+          <li><img src="./img/slide/foto2.jpg" alt=""></li>
+          <li><img src="./img/slide/foto3.jpg" alt=""></li>
+          <li><img src="./img/slide/foto4.jpg" alt=""></li>
+          <li><img src="./img/slide/foto5.jpg" alt=""></li>
+          <li><img src="./img/slide/foto6.jpg" alt=""></li>
+        </ul>
+      </div>
+    </section>
 
     <section class="grid-mid contato js-scroll" id="contato">
       <h1 class="title">Contato</h1>
