general bugs fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
         <li><a href="#contato">CONTATO</a></li>
-        <li><a href="login.html" data-modal="abrir">LOGIN ⇀</a></li>
+        <li><a href="login.html" data-modal="abrir">LOGIN <span class="arrow-black"></span></a></li>
       </ul>
     </nav>
 
@@ -148,13 +148,13 @@
 
   <section class="modal-container" data-modal="container">
     <div class="modal">
-      <button class="fechar" data-modal="fechar"" type=" button">X</button>
+      <button class="fechar" data-modal="fechar"" type=" button"></button>
       <form action="">
         <label for="email">Email</label>
         <input type="text" for="email" id="email">
         <label for="password"> Senha</label>
         <input type="password" for="password" id="password">
-        <button type="submit" data-modal="entrar">Entrar</button>
+        <button type="button" data-modal="entrar">Entrar</button>
       </form>
     </div>
   </section>
